footer alignment fixed

--- a/styles/components/_footersection.scss
+++ b/styles/components/_footersection.scss
@@ -12,7 +12,7 @@
   }
 
   &__heading {
-    padding: 1rem;
+    padding: 1rem 0;
 
     @media only screen and (max-width: 1024px) {
       text-align: center;
@@ -20,12 +20,11 @@
   }
 
   &__content {
-    // text-align: center;
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 1rem;
+    padding: 1rem 0;
 
     & p {
       font-size: 1rem;
